# CloneLM

./: .env.example  .gitignore  CLAUDE.md  Email.md  PLAN.md  RAILWAY.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  railway.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: audio.py  auth.py  chat.py  health.py  notebooks.py  notes.py  settings.py  sources.py  studio.py
backend/app/domain/: models.py
backend/app/domain/ports/: __init__.py  auth.py  embeddings.py  llm.py  repositories.py  tts.py  vector_store.py
backend/app/infrastructure/: security.py
backend/app/infrastructure/migrations/: env.py
backend/app/infrastructure/migrations/versions/: 0001_initial.py  0002_users_and_ownership.py
backend/app/infrastructure/persistence/: db.py  orm.py  pgvector_store.py  repositories.py
backend/app/infrastructure/providers/: anthropic_llm.py  bge_embeddings.py  fake_embeddings.py  fake_llm.py  fake_tts.py  ollama_llm.py  piper_tts.py  voyage_embeddings.py
backend/app/services/audio/: __init__.py  script.py  service.py
backend/app/services/chat/: __init__.py  grounding.py  prompts.py
backend/app/services/ingestion/: chunking.py  service.py
backend/app/services/ingestion/parsing/: __init__.py  extract.py
backend/app/services/retrieval/: __init__.py  retriever.py
backend/app/services/studio/: __init__.py  kinds.py
backend/app/shared/: errors.py  identity.py  logging.py
backend/sample_data/: fontawesome5.md  photosynthesis.txt
backend/scripts/: download_piper_voices.py  faithfulness_demo.py
backend/tests/: conftest.py  test_audio_overview.py  test_audio_script_parsing.py  test_chat_anthropic_provider.py  test_chat_endpoint.py  test_chat_grounding.py  test_contracts.py  test_faithfulness_eval.py  test_health.py  test_ingestion_chunking.py  test_ingestion_e2e.py  test_ingestion_parsing.py  test_multiuser.py  test_notebook_crud.py  test_notes_crud.py  test_retrieval_search.py  test_security.py  test_studio_endpoint.py
design/: CloneLM-empty.excalidraw  CloneLM-frontend.excalidraw  _gen_empty.py  _gen_excalidraw.py  frontend-test-plan.md  frontend-test-report.md  ollama-provider-test-report.md
frontend/: README.md  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AddSourceModal.tsx  AuthView.tsx  BelegModal.tsx  ChatPane.tsx  Modal.tsx  NoteModal.tsx  SettingsModal.tsx  SourcesPane.tsx  StudioPane.tsx  TopBar.tsx
