[project]
name = "clonelm-backend"
version = "0.1.0"
description = "CloneLM — a faithfulness-first NotebookLM clone (FastAPI backend)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "alembic>=1.13",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
# Heavy, local embedding model. Installed by Track A (ingestion) when wiring
# the real bge-m3 adapter. Phase 0 and the fake providers do NOT need this.
embeddings = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
