[project]
name = "clonelm-backend"
version = "0.1.0"
description = "CloneLM — a faithfulness-first NotebookLM clone (FastAPI backend)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "alembic>=1.13",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
    "sse-starlette>=2.1",
    # Hosted embeddings for the deployed build (DEPLOYED=true). Lightweight API
    # client — kept in the default deps so a plain `uv sync` on the host installs
    # it, unlike the heavy local bge-m3 stack which stays an opt-in extra below.
    "voyageai>=0.3",
    # Multi-user auth (deployed build): password hashing (argon2id), JWT issuing,
    # and Fernet symmetric encryption for API keys at rest.
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "cryptography>=42.0",
]

[project.optional-dependencies]
# Heavy, local embedding model. Installed by Track A (ingestion) when wiring
# the real bge-m3 adapter. Phase 0 and the fake providers do NOT need this.
embeddings = [
    "sentence-transformers>=3.0",
]
# Local neural TTS for the Audio Overview (stretch). Pulls onnxruntime; the
# fake-TTS path and the rest of the app do NOT need this. Voice models are
# downloaded at runtime (see scripts/download_piper_voices.py).
audio = [
    "piper-tts>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
